# llvm-project

./: COMMIT
eurollvm/: README.md  coalesce.mlir  if.mlir  if2.mlir  if3.mlir  if4.mlir
flang/lib/Semantics/: check-directive-structure.h
mlir/: CMakeLists.txt
mlir/benchmark/: CMakeLists.txt  PresburgerSetComplement  PresburgerSetEmpty  PresburgerSetEqual  PresburgerSetIntersect  PresburgerSetSubtract  PresburgerSetTestCase  PresburgerSetUnion  README.md  fpl  plot.py  set.bench.cpp
mlir/benchmarks/: CMakeLists.txt  mpint.bench.cpp
mlir/cmake/modules/: IRDLToCpp.cmake
mlir/docs/: ExtensibleDialects.md
mlir/examples/rewriting/: 5_block_terminators.mlir  8_branch_only_to_sibling_blocks.mlir  9_inter_block_ssa_dom.mlir
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir-c/: IR.h
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/IR/: CMakeLists.txt  ExtensibleDialect.cpp  IsDynamicInterfaces.cpp  MLIRContext.cpp
mlir/lib/Parser/: AffineParser.cpp  Parser.h
mlir/lib/TableGen/: Dialect.cpp
mlir/lib/Tools/: CMakeLists.txt
mlir/lib/Transforms/: CMakeLists.txt  CSE.cpp  KnownBitsAnalysis.cpp
mlir/test/CAPI/: irdl.c
mlir/test/IR/: dynamic.mlir  traits.mlir
mlir/test/Transforms/: test-rewrite-dynamic-op.mlir
mlir/test/knownbitsanalysis/: constant.mlir  or.mlir  unknown-parameter.mlir
mlir/test/mlir-opt/: commandline.mlir
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-irdlgen/: CMakeLists.txt  mlir-irdlgen.cpp
test-breaking-invariants/: break-dangling-ops.mlir  break-value-scoping.mlir
utils/: build-llvm.sh  build.sh  check-mlir.sh
(+161 files in other folders)
